force-app/main/default/objects/User_Story_Metadata__c/User_Story_Metadata__c.object-meta.xml
<CustomObject>
    <label>User_Story_Metadata</label>
    <nameField>
        <label>User_Story_M-</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User_Story_Metadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>