force-app/main/default/objects/User_Story_Metadata__c/fields/Metadata_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Metadata_API_Name__c</fullName>
    <label>Metadata_API_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>