force-app/main/default/objects/User_Story_Metadata__c/fields/Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type__c</fullName>
    <label>Metadata_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>