force-app/main/default/objects/User_Story_Metadata__c/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>