force-app/main/default/objects/User_Story_Metadata__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>User_Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipLabel>User_Story</relationshipLabel>
    <relationshipName>User_Story</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>